compiler/eight-tests/tests/snapshots/ui/compiler_tests__ui@type__constant_index_of_non_struct.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/type/constant_index_of_non_struct.test
input_file: compiler/eight-tests/tests/ui/type/constant_index_of_non_struct.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::invalid_field_reference_of_non_struct

  × type $1@1 is not a struct type and does not have fields
   ╭─[tests/ui/type/constant_index_of_non_struct.test:2:13]
 1 │ fn test(q: i32) {
 2 │   let k = q.z;
   ·             ┬
   ·             ╰── unknown field z
 3 │ }
   ╰────
