compiler/eight-tests/tests/snapshots/ui/compiler_tests__ui@type__let_assignment_unknown_type.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/type/let_assignment_unknown_type.test
input_file: compiler/eight-tests/tests/ui/type/let_assignment_unknown_type.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::unknown_type

  × Unknown does not name a known type
   ╭─[tests/ui/type/let_assignment_unknown_type.test:2:10]
 1 │ fn test() {
 2 │   let k: Unknown = 123;
   ·          ───┬───
   ·             ╰── could not find type Unknown
 3 │ }
   ╰────
